[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.10"
thiserror = "1.0.21"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
bs58 = "0.4.0"
borsh = "0.9.1"

[dev-dependencies]
solana-program-test = "1.6.6"
solana-sdk = "1.6.6"

[lib]
crate-type = ["cdylib", "lib"]
